@@ -1,3 +1,7 @@
+Mon Sep 15 15:13:52 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>
+
+	* xe_stubs.adb: Fix Mark_Unit_On_Partition when unit is generic.
+
 Sun Sep 14 19:47:21 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* xe_check.adb: Do not barf about generic RCI units.
